--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    Create a new Git repository called "Croissant" with 3 pages, index.html, photo.html and contact.html. 
-    Add some text on the index and contact pages, add a photo on the photo.html page
-     and publish it to Netlify. Each page should link to each other.
-      Then, add some CSS, change the background color of the website and 
-      deploy it again to Netlify. Deploy your website multiple times if needed. 
-      Submit the Netlify URL of your project. 
+   <h1>Contact Croissant</h1>
+      To contact croissant.com, please email us at hello@croissant.com for more information.
+      <footer>
+        <a href="/" title="Home">Homepage</a>
+        <a href="/photo" title="Croissant photo"> Photo</a>
+        <a href="/contact" title="Contact Croissant"> Contact</a>
+     </footer>
 </body>
 </html>
