--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/styles.css"/>
     <title>Croissant</title>
 </head>
 <body>
-    Create a new Git repository called "Croissant" with 3 pages, index.html, photo.html and contact.html. 
-    Add some text on the index and contact pages, add a photo on the photo.html page
-     and publish it to Netlify. Each page should link to each other.
-      Then, add some CSS, change the background color of the website and 
-      deploy it again to Netlify. Deploy your website multiple times if needed. 
-      Submit the Netlify URL of your project. 
+    <h1>Welcome to Croissant</h1> 
+ <p>
+    A croissant is a French crescent-shaped roll made of sweet flaky pastry, often eaten for breakfast.
+ </p>
+ <footer>
+    <a href="/" title="Home">Homepage</a>
+    <a href="/photo" title="Croissant photo"> Photo</a>
+    <a href="/contact" title="Contact Croissant"> Contact</a>
+ </footer>
 </body>
 </html>
