--- a/photo.html
+++ b/photo.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css"/>
+    <title>Croissant Picture</title>
 </head>
 <body>
-    <img src="" alt="">
+    <h1> Picture of croissant</h1>
+    <img src="https://optimistic-morse-46a9fc.netlify.app/images/croissant.jpg" alt="">
+    <footer>
+        <a href="/" title="Home">Homepage</a>
+        <a href="/photo" title="Croissant photo"> Photo</a>
+        <a href="/contact" title="Contact Croissant"> Contact</a>
+     </footer>
 </body>
 </html>
