Pages are linked

--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
       To contact croissant.com, please email us at hello@croissant.com for more information.
       <footer>
         <a href="/" title="Home">Homepage</a>
-        <a href="/photo" title="Croissant photo"> Photo</a>
-        <a href="/contact" title="Contact Croissant"> Contact</a>
+        <a href="/photo.html" title="Croissant photo"> Photo</a>
+        <a href="/contact.html" title="Contact Croissant"> Contact</a>
      </footer>
 </body>
 </html>
