--- a/photo.html
+++ b/photo.html
@@ -11,8 +11,8 @@
     <img src="https://optimistic-morse-46a9fc.netlify.app/images/croissant.jpg" alt="">
     <footer>
         <a href="/" title="Home">Homepage</a>
-        <a href="/photo" title="Croissant photo"> Photo</a>
-        <a href="/contact" title="Contact Croissant"> Contact</a>
+        <a href="/photo.html" title="Croissant photo"> Photo</a>
+        <a href="/contact.html" title="Contact Croissant"> Contact</a>
      </footer>
 </body>
 </html>
