--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
  </p>
  <footer>
     <a href="/" title="Home">Homepage</a>
-    <a href="/photo" title="Croissant photo"> Photo</a>
-    <a href="/contact" title="Contact Croissant"> Contact</a>
+    <a href="/photo.html" title="Croissant photo"> Photo</a>
+    <a href="/contact.html" title="Contact Croissant"> Contact</a>
  </footer>
 </body>
 </html>
