Added SEO information

--- a/contact.html
+++ b/contact.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Croissant contact page with contact information for Croissant Company">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Croissant Company Contact Information</title>
 </head>
 <body>
    <h1>Contact Croissant</h1>
       To contact croissant.com, please email us at hello@croissant.com for more information.
       <footer>
-        <a href="/" title="Home">Homepage</a>
+        <a href="/" title="Croissant homepage">Homepage</a>
         <a href="/photo.html" title="Croissant photo"> Photo</a>
         <a href="/contact.html" title="Contact Croissant"> Contact</a>
      </footer>
