--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Croissant homepage with information about croissant">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css"/>
-    <title>Croissant</title>
+    <title>Croissant's a French Pastry</title>
 </head>
 <body>
     <h1>Welcome to Croissant</h1> 
