--- a/photo.html
+++ b/photo.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Croissant picture page with a picture of a croissant">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/styles.css"/>
     <title>Croissant Picture</title>
 </head>
 <body>
-    <h1> Picture of croissant</h1>
-    <img src="https://optimistic-morse-46a9fc.netlify.app/images/croissant.jpg" alt="">
+    <h1> French pastry- Croissant</h1>
+    <img src="https://optimistic-morse-46a9fc.netlify.app/images/croissant.jpg" alt="Croissant photograph">
     <footer>
-        <a href="/" title="Home">Homepage</a>
+        <a href="/" title="Croissant Homepage">Homepage</a>
         <a href="/photo.html" title="Croissant photo"> Photo</a>
         <a href="/contact.html" title="Contact Croissant"> Contact</a>
      </footer>
